# judgyprophet

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  AUTHORS.md  CONTRIBUTING.md  Dockerfile  LICENSES_dependencies  MANIFEST.in  NEWS.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: build_docs.yml  pytest.yml
Quickstart/: index.html
docs/: Quickstart.md  index.md  reference.md  technical_description.md
docs/overrides/: main.html
docs/tutorials/: Combined_Tutorials.md  T0 - Intro.md  T1 - Level Events.md  T2 - Trend Events.md  T3 - Seasonality.md  T4 - Hyperparameters.md
judgyprophet/: __init__.py  judgyprophet.py  utils.py
judgyprophet/stan/: judgyprophet.stan
judgyprophet/tutorials/: resources.py
reference/: index.html
search/: search_index.json
technical_description/: index.html
tests/: conftest.py  test_indexing.py  test_level_event.py  test_level_trend_event.py  test_seasonality.py  test_trend_event.py  test_unspecified_changepoint.py
tutorials/: Quickstart.ipynb  T1 - Level Events.ipynb  T2 - Trend Events.ipynb  T3 - Seasonality.ipynb  T4 - Hyperparameters.ipynb  full_tutorial.ipynb
tutorials/Combined_Tutorials/: index.html
tutorials/T0 - Intro/: index.html
tutorials/T1 - Level Events/: index.html
tutorials/T2 - Trend Events/: index.html
tutorials/T3 - Seasonality/: index.html
tutorials/T4 - Hyperparameters/: index.html
